css/style.css
@charset "UTF-8";

#header {
  position: fixed;
  width: 100%;
  background: white;
  opacity: .9;
  top: 0;
  z-index: 10000;
  white-space: nowrap;
}

#footer {
  width: 100%;
  background: white;
  opacity: .9;
  padding: 1.5em;
}

#header .navbar-expand {
  justify-content: space-between;
}

#header a {
  color: black;
  padding-right: 0;
}

#intro {
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/intro.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 50% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
  padding: 10em 0;
}

#how_we_met {
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/marble.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 20% 50%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
}

#proposal_story {
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/shirleyheights.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 15% 0%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
}


#registry {
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/leaves.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 40% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
  margin-top: 7.925em;
  padding: 0;
}

#countdown_timer {
  height: 25em;
  position: relative;
}

#intro .names span {
    font-size: 2em;
}

.monospace {
  font-family: 'Source Code Pro', monospace;
}

.cursive {
  font-family: 'Dancing Script', cursive;
}

.her_writing {
  font-family: 'Indie Flower', cursive;
}

.his_writing {
  font-family: 'Reenie Beanie', cursive;
}

.story {
  padding: 3em 1em;
  background-color: rgba(0,0,0,.5);
}

.story h2 {
  font-size: 1.25em;
}

#canvas {
  position: relative;
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/hands.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 40% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  width: 100%;
  height: 100%;
}

#countdown_clock {
  position: absolute;
  top: 15%;
  left: 0;
  right: 0;
  font-size: 3em;
  color: white;
}

#rsvp {
  position: relative;
  background-image: url('../images/includes/overlay.png'), url('../images/backgrounds/dockyard.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 40% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  background-color: white;
  margin-top: 8.2em;
  padding: 0;
}

.input_underline {
  border: none;
  border-bottom: 1px solid black;
}

#input_name {
  width: 11em;
}

#input_comment {
  width: 14em;
}

.rsvp_card {
  background: white;
  padding: 1em;
  opacity: 0.95;
}

#registry .signature {
  font-size: 1.5em;
}

@media screen and (min-width:576px) {
  #countdown_timer {
    height: 30em;
  }
  #countdown_clock {
    top: 30%;
    padding: 0 1em;
  }
  .story-container {
    padding: 7.5em 2em;
  }
  #input_name {
    width: 16em;
  }
  #input_comment {
    width: 19em;
  }
  #registry {
    margin-top: 5.25em;
    padding: 1em 10em;
  }
  #rsvp {
    margin-top: 5.25em;
    padding: 1em 10em;
  }
  .rsvp_card {
    border-radius: 1em;
  }
  #header a {
    padding-right: 0.5em;
  }
}

@media screen and (min-width: 992px) {
    #countdown_timer {
      height: 35em;
    }
    #countdown_clock {
      top: 35%;
    }
    .story-container {
      padding: 10em 15em;
    }
    .story {
        padding: 3em 5em;
    }
    #registry {
      padding: 1.5em 20em;
    }
    #rsvp {
      padding: 1.5em 21em;
    }
}

